NIFI-9972 Variable naming and documentation polishing